<resources>
    <string name="app_name">Todo Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_holder">Place Holder</string>
    <string name="checkbox">CheckBox</string>
    <string name="new_task">New Task</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="select_time">Select Time</string>
    <string name="save">Save</string>
    <string name="all_tasks">All Tasks</string>
    <string name="time">12:00</string>
    <string name="task_title">Task Title</string>
</resources>