<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/taskCellContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    app:cardCornerRadius="30dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleY="1.5"
            android:scaleX="1.5"
            android:contentDescription="@string/checkbox"
            android:id="@+id/completeButton"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/baseline_circle_24"
            android:backgroundTint="@android:color/transparent"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textColor="@color/text_color"
            android:text="@string/task_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

        <TextView
            android:layout_marginHorizontal="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dueTime"
            android:text="@string/time"
            android:layout_marginEnd="15dp"
            android:textColor="@color/text_color"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_gravity="center"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>